--- a/package.json
+++ b/package.json
@@ -19,13 +19,27 @@
     "mongoose": "^8.9.6"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@types/chai": "^5.0.1",
+    "@types/chai-http": "^3.0.5",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
     "@types/node": "^22.13.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
     "@typescript-eslint/parser": "^8.22.0",
+    "chai": "^5.1.2",
+    "chai-http": "^5.1.1",
     "eslint": "^9.19.0",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "mocha": "^11.1.0",
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0"
   }
 }
