--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google-cloud/translate": "^8.5.0",
     "@vitalets/google-translate-api": "^9.2.1",
+    "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-joi-validation": "^6.0.0",
+    "http-proxy-agent": "^7.0.2",
     "ioredis": "^5.4.2",
     "joi": "^17.13.3",
     "mongoose": "^8.9.6"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.19.0",
     "@types/chai": "^5.0.1",
     "@types/chai-http": "^3.0.5",
@@ -38,6 +42,7 @@
     "mocha": "^11.1.0",
     "sinon": "^19.0.2",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3",
