--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/mongoose": "^4.1.0",
     "@google-cloud/translate": "^8.5.0",
+    "@types/styled-components": "^5.1.34",
     "@vitalets/google-translate-api": "^9.2.1",
+    "adminjs": "^7.8.15",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -21,7 +25,8 @@
     "http-proxy-agent": "^7.0.2",
     "ioredis": "^5.4.2",
     "joi": "^17.13.3",
-    "mongoose": "^8.9.6"
+    "mongoose": "^8.9.6",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
